--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,6 @@
   </dependencies>
 
 
-
   <build>
     <plugins>
       <plugin>
@@ -61,6 +60,16 @@
           </archive>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.5.0</version>
+        <configuration>
+          <mainClass>dad.Main</mainClass>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
+
 </project>
